# Jahresarbeit-2003

./: .clang-format  CMakeLists.txt  GNU General Public License.htm  JA2003.dsp  JA2003.dsw  LICENCES.md  highscore.txt  hilfe.txt  ja2003scr.rc  main.c  main.cpp  resource.h
